// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dateSeparator > date separator snapshot 1`] = `
<div
  class="date--separator text-slate-700"
  data-v-b24b73fa=""
>
   Nov 18, 2019 
</div>
`;

exports[`dateSeparator date separator snapshot 1`] = `
<div
  class="date--separator text-slate-700"
>
  
  Nov 18, 2019

</div>
`;
